--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask~=3.0.2
 SQLAlchemy~=2.0.27
 Werkzeug~=3.0.1
-WTForms~=3.1.2
-flask-wtf~=1.2.1
 flask-login~=0.6.3
 requests~=2.31.0
+yandexgptlite~=0.1.7
